crates/analyzer/tests/snapshots/errors__bad_tuple_attr2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No field `m` exists on this tuple
  ┌─ compile_errors/bad_tuple_attr2.fe:6:27
  │
6 │         self.my_sto_tuple.m
  │                           ^ undefined field
  │
  = Note: Tuple values are accessed via `itemN` properties such as `item0` or `item1`


